--- a/WpfApplication/WpfApplication.csproj
+++ b/WpfApplication/WpfApplication.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ModelPhoneNumber.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelContact.cs" />
